<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_title">Welcome to the Games Rating app!</string>
    <string name="txt_header">Click START to start rating :)</string>
    <string name="btn_start_text">Start</string>
    <string name="txt_ratingTitle">Rate the following game from 1 to 5 stars!</string>
    <string name="txt_ratingGame" />
    <string name="btn_ratingtext">to summary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_over">Start over</string>
</resources>