<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingFragment">


    <TextView
        android:id="@+id/txt_ratingTitleid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ratingTitle"
        app:layout_constraintBottom_toTopOf="@+id/txt_ratingHeaderid"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/txt_ratingTitle" />

    <TextView
        android:id="@+id/txt_ratingHeaderid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ratingGame"
        app:layout_constraintBottom_toTopOf="@+id/rb_ratingbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ratingTitleid"
        tools:text="@string/txt_ratingGame" />

    <RatingBar
        android:id="@+id/rb_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ratingHeaderid" />

    <Button
        android:id="@+id/btn_to_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ratingtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_ratingbar"
        tools:text="@string/btn_ratingtext" />
</androidx.constraintlayout.widget.ConstraintLayout>